--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -9,5 +9,9 @@ server {
   }                                                                             
   location / {                                                                  
     return 404;                                                                 
-  }                                                                             
+  }
+  location /hello/ {
+    proxy_pass http://127.0.0.1/hello/;
+  }
+                                                                     
 }
