--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -10,8 +10,7 @@ server {
   location / {                                                                  
     return 404;                                                                 
   }
-  location /hello/ {
-    proxy_pass http://127.0.0.1/hello/;
+  location ^~ /hello/ {
+    proxy_pass http://0.0.0.0:8080;
   }
-                                                                     
 }
